# parallel-programming

./: .gitignore  .gitmodules
Demo/: 01-AddVector.cu  01-Hello.cu  02-MatAdd.cu  03-WarpDivergence.cu  04-AtomicDemo.cu  05-MemoryDemo.cu  06-MatAddCompare.cu  06-MatrixTranspose.cu  07-CUDAStream.cu  07-MappedMemoryMatAdd.cu  07-PageableVSPinnedMemory.cu  07-PinnedMemoryMatAdd.cu  07-UnifiedMemory.cu  DemoUseClassCUDA.cu
HW1/: HW1_P1.cu  HW1_P2.cu  demo.ipynb
HW1/22120310/: 1x1.pnm  250x250.pnm  filter_emboss.txt
HW2/: HW2(1).ipynb  HW2_P1.cu  HW2_P2.cu
HW2/22120310/: HW2_P1.cu  HW2_P2.cu
HW3/: HW3 (1).ipynb  HW3 (2).ipynb  HW3.ipynb  HW3_P1 (1).cu  HW3_P1.cu  HW3_P2 (1).cu  HW3_P2.cu  employee-budget-report.xlsx  lesson-HW3.md
HW3/22120310/: HW3.ipynb  HW3_P1.cu  HW3_P2.cu
all_phase/project/: CMakeLists.txt
all_phase/project/features/: .gitkeep
all_phase/project/include/: autoencoder.h
all_phase/project/src/inference/: extract_features.cu
all_phase/project/src/kernel/: autoencoder_ops.cu  gpu_conv2d_fp16_backward_v8.cu  gpu_conv2d_fp16_forward_v6.cu
all_phase/project/src/layer/: autoencoder.cu
all_phase/project/src/naive/: naive_cpu_autoencoder.cpp  naive_gpu_autoencoder.cu
all_phase/project/src/train/: train_AE.cu  train_svm.py
all_phase/project/test/: test_autoencoderops.cu
all_phase/project/weights/: .gitkeep
all_phase/test/: gpu_conv2d_fp16_backward.cu  test_backward.cu
feat-phase2-3-4/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  autoencoder_gpu.weights  build.sh  gpu_train_opt  run.sh  source.ipynb  verify_gpu
feat-phase2-3-4/cmake/: thundersvmConfig.cmake.in
feat-phase2-3-4/command/: build_all.bat  build_phase1.bat  build_phase2.bat  build_phase3.bat
feat-phase2-3-4/include/: autoencoder.h  cuda_utils.h  dataset.h  gpu_autoencoder.h  gpu_layer.h  layer.h  svm_wrapper.h
feat-phase2-3-4/src/: Claude_train_gpu.cu  autoencoder.cpp  dataset.cpp  gpu_autoencoder.cu  layers_cpu.cpp  layers_gpu.cu  layers_gpu_opt.cu  main.cpp  main_gpu.cu  svm_wrapper.cpp  verify_gpu.cu
feat-phase2_mixed/include/common/: cuda_memory_pool.h  cuda_utils.h  gpu_tensor.h
feat-phase2_mixed/include/layer/: gpu_conv2d.h  gpu_conv2d_fp16.h
feat-phase2_mixed/src/: dataset.cpp  train_gpu.cu
feat-phase2_mixed/src/common/: cuda_memory_pool.cu  gpu_tensor.cu
feat-phase2_mixed/src/core/: gpu_tensor.cu  loss.cu  optimizer.cu
feat-phase2_mixed/src/include/: autoencoder.h  gpu_layer.h
feat-phase2_mixed/src/kernel/: autoencoder_ops.cu  conv2d_forward_wmma_v6.cu  gpu_conv2d_fp16_backward.cu
feat-phase2_mixed/src/layer/: gpu_conv2d.cu  gpu_conv2d_fp16.cu
feat-phase2_mixed/src/layers/: conv2d.cu  maxpool2d.cu  relu.cu  upsample.cu
feat-phase2_mixed/src/utils/: cuda_utils.h  fp16_utils.cu
feat-phase2_mixed/test/: Benchmark_v8.ipynb
final_pj/: .gitignore  00_START_HERE.md  BUILD_FIX.md  CMakeLists.txt  COLAB_SETUP.md  DELIVERY_CHECKLIST.md  HUONG_DAN_COLAB.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PERFORMANCE_EXPLAINED.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_TEST_GUIDE.md  README.md  TESTING_GUIDE.md  TRAINING_GUIDE.md  analyze_performance.txt  build.sh  final.ipynb  quickstart.sh  verify_build.sh
final_pj/include/: autoencoder.h  autoencoder_gpu.h  benchmark.h  cifar10.h  config.h  cpu_layers.h  data_loader.h  device.h  gpu_autoencoder.h  gpu_layer.h  layers.h
final_pj/src/: CMakeLists.txt  autoencoder.cpp  cpu_layers.cpp  data_loader.cpp  feature_extraction.cu  gpu_autoencoder.cu  svm_classifier.cpp  test_data_loader.cpp  train_cpu.cpp  train_gpu.cu
final_pj/src/core/: benchmark.c  device.c
final_pj/src/cpu/: autoencoder.c  conv2d_cpu.c  maxpool_cpu.c  relu_cpu.c
final_pj/src/cuda/: autoencoder_gpu.cu  autoencoder_gpu_ops.cu  autoencoder_gpu_train.cu  device_cuda.cu
final_pj/src/data/: cifar10.c
final_pj/src/layers/cpu/: conv2d_cpu.c  loss_cpu.c  upsample_cpu.c
final_pj/src/layers/gpu/: conv2d_gpu.cu  gpu_layer_conv2d.cu  loss_gpu.cu  maxpool_gpu.cu  relu_gpu.cu  upsample_gpu.cu
final_pj/src/models/: autoencoder_cpu.c  autoencoder_gpu.cu  autoencoder_gpu_ops.cu  autoencoder_gpu_train.cu
final_pj/src/utils/: config.c
final_pj/test/: profile_layers.c  test_cifar10.c  test_conv2d_simple.c  test_device_compare.c  train_autoencoder.c  train_autoencoder_gpu.c
hw0/HW0/: HW0 (1).ipynb  ~$0-WarmUp.docx  ~WRL1624.tmp
hw0/HW0/22120310/: HW0.ipynb  HW0_P1.cu  HW0_P2.cu
phase_3_4/: BACKWARD_KERNEL_OPTIMIZATIONS.md  FORWARD_KERNEL_OPTIMIZATIONS.md  README.md
phase_3_4/project/: CMakeLists.txt  README.md
phase_3_4/project/data/: .gitkeep
phase_3_4/project/docs/: BACKWARD_KERNEL_OPTIMIZATIONS.md  FORWARD_KERNEL_OPTIMIZATIONS.md  REPORT_SECTIONS_4_5.md
phase_3_4/project/include/: autoencoder.h
phase_3_4/project/src/inference/: extract_features.cu
phase_3_4/project/src/kernel/: autoencoder_ops.cu  gpu_conv2d_fp16_backward_v8.cu
phase_3_4/project/src/layer/: autoencoder.cu
phase_3_4/project/src/naive/: naive_cpu_autoencoder.cpp
phase_3_4/project/src/train/: train_AE.cu  train_svm.py
phase_3_4/project/test/: test_conv2d_v6.cu
phase_3_4/test/: test_forward.cu
